Template lyric page

--- a/game.html
+++ b/game.html
@@ -3,12 +3,21 @@
     <head>  
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Singable</title>
     </head>
     <body>
         <div>
             <h1>Let's play Singable!</h1>
-            <strong>esketit</strong>
+            <p class="lyric">I have a pet _____</p>
+        </div>
+        <div class="options">
+            <div class="leftpic">
+                <img src="./assets/images/dog.jpg" alt="dog">
+            </div>
+            <div class="rightpic">
+                <img src="./assets/images/rabbit.png" alt="rabbit">
+            </div>
         </div>
     </body>
 </html>
