First lyric is set up! Now to make it do something

--- a/game.html
+++ b/game.html
@@ -8,14 +8,13 @@
     </head>
     <body>
         <div>
-            <h1>Let's play Singable!</h1>
             <p class="lyric">I have a pet _____</p>
         </div>
         <div class="options">
-            <div class="leftpic">
+            <div class="pic">
                 <img src="./assets/images/dog.jpg" alt="dog">
             </div>
-            <div class="rightpic">
+            <div class="pic">
                 <img src="./assets/images/rabbit.png" alt="rabbit">
             </div>
         </div>
