--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <title>Singable</title>
     </head>
     <body>
@@ -12,11 +13,12 @@
         </div>
         <div class="options">
             <div class="pic">
-                <img src="./assets/images/dog.jpg" alt="dog">
+                <button class="left" id="dog"><img src="./assets/images/dog.jpg" alt="dog"></button>
             </div>
             <div class="pic">
-                <img src="./assets/images/rabbit.png" alt="rabbit">
+                <button class="right" id="rabbit"><img src="./assets/images/rabbit.png" alt="rabbit"></button>
             </div>
         </div>
+        <script src="engine.js"></script>
     </body>
 </html>
