Improved accessibility features and data mgmt

--- a/game.html
+++ b/game.html
@@ -11,7 +11,6 @@
 
 <body>
     <div>
-        <button id="speak">Speak</button>
         <p class="lyric">I have a pet _____</p>
     </div>
     <div class="options">
@@ -22,9 +21,12 @@
             <button class="right" id="rabbit"><img src="./assets/images/rabbit.png" alt="rabbit"></button>
         </div>
     </div>
+   
+    <div class="nextLyric">
+        <button id="next">Next</button>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="engine.js"></script>
-
 
 </body>
 
