Added functionality for all 4 lyrics and movement b/t them

--- a/game.html
+++ b/game.html
@@ -10,16 +10,7 @@
 </head>
 
 <body>
-    <div>
-        <p class="lyric">I have a pet _____</p>
-    </div>
-    <div class="options">
-        <div class="pic">
-            <button class="left" id="dog"><img src="./assets/images/dog.jpg" alt="dog"></button>
-        </div>
-        <div class="pic">
-            <button class="right" id="rabbit"><img src="./assets/images/rabbit.png" alt="rabbit"></button>
-        </div>
+    <div id="root">
     </div>
    
     <div class="nextLyric">
