A11y changes based on WAVE evaluation

--- a/game.html
+++ b/game.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <div id="root">
+    <div role=”main id="root">
     </div>
    
-    <div class="nextLyric">
+    <div role=”navigation” class="nextLyric">
         <button id="next">Next</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
