Added page regions to HTML structure bc WAVE said so

--- a/game.html
+++ b/game.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <div role=”main id="root">
+    <div id="root" role=”main">
     </div>
    
-    <div role=”navigation” class="nextLyric">
+    <footer role=”navigation” class="nextLyric">
         <button id="next">Next</button>
-    </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="engine.js"></script>
 
