Changed margins on buttons, added possibility for background music

--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
         <button id="next">Next</button>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="engine.js"></script>
 
 </body>
